// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Image Snapshots ClassName 1`] = `
<img
  className="sc-bdfBwQ lgHXgS Name"
  size="medium"
/>
`;

exports[`Image Snapshots No props 1`] = `
<img
  className="sc-bdfBwQ lgHXgS"
  size="medium"
/>
`;

exports[`Image Snapshots all 1`] = `
<div
  className="sc-dlfnbm hvtXco Name"
  size="huge"
>
  <img
    className="sc-bdfBwQ sc-gsTCUz lgHXgS gzujeg"
  />
</div>
`;

exports[`Image Snapshots aspectRatio 1`] = `
<div
  className="sc-dlfnbm iQAcnH"
  size="medium"
>
  <img
    className="sc-bdfBwQ sc-gsTCUz lgHXgS gzujeg"
  />
</div>
`;

exports[`Image Snapshots invalid size 1`] = `
<img
  className="sc-bdfBwQ lgHXgS"
  size={100}
/>
`;

exports[`Image Snapshots round 1`] = `
<img
  className="sc-bdfBwQ gTCJux"
  size="medium"
/>
`;

exports[`Image Snapshots size 1`] = `
<img
  className="sc-bdfBwQ lgHXgS"
  size="huge"
/>
`;

exports[`Image Snapshots width 1`] = `
<img
  className="sc-bdfBwQ lgHXgS"
  size="medium"
/>
`;
